--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     
     <div class="div2">
         <div class="div3">
-            <label for="name">Name:</label>
+            <label for="name">Full Name:</label>
             <input type="text" class="js-input1" id="name" placeholder="Your name..." onkeydown="enterToSubmit()"><br><br>
         </div>
 
