--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>my m_pesa</title>
-  <link rel="stylesheet" href="../css/index.css">
+  <link rel="stylesheet" href="css/index.css"> <!----> 
   <link rel="stylesheet" href="messages.html">
 
   <style>
@@ -16,13 +16,13 @@
   <section class="pop-up">
     <div class="blue-box" id="bluebox">
         <div class="header"> 
-                <img class="true" src="../icons/true.png" alt="">        
+                <img class="true" src="icons/true.png" alt="">  <!---->      
                 <p class="sms-time"></p>
-                <img class="close-icon" src="../icons/x-regular-132.png" alt="">
+                <img class="close-icon" src="icons/x-regular-132.png" alt=""><!----> 
         </div>        
         <div class="white-box">
             <div class="mpesaapp">
-                <img class="mpesa-icon" src="../icons/mpesa3 icon .png" alt="">
+                <img class="mpesa-icon" src="icons/mpesa3 icon .png" alt=""><!----> 
                 <h1 class="h1">MPESA</h1>
             </div>
             <div class="message-box">
@@ -69,7 +69,7 @@
   <!-- Messages  -->
   <div class="message-outputs">
     <div class="messages-head">
-        <img class="mpesa-icon"  src="../icons/mpesa3 icon .png" alt="">
+        <img class="mpesa-icon"  src="icons/mpesa3 icon .png" alt=""><!----> 
         <h3 style="margin-top: 4px; ">Messages</h3>
     </div>
     <div class="mpesaMessage1-div">
