--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>my m_pesa</title>
   <link rel="stylesheet" href="css/index.css"> <!----> 
-  <link rel="stylesheet" href="messages.html">
+  <link rel="stylesheet" href="html/messages.html">
 
   <style>
   </style>
@@ -86,6 +86,6 @@
 </main>
 
 
-  <script src="../my_mpesa/js/index.js"></script>
+  <script src="js/index.js"></script>
 </body>
 </html>
