updated html and css

--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>my m_pesa</title>
   <link rel="stylesheet" href="css/index.css"> <!----> 
-  <link rel="stylesheet" href="html/messages.html">
 
   <style>
   </style>
@@ -61,8 +60,8 @@
             <label for="balance">Balance:</label>
             <input type="text" class="js-input6" id="balance" placeholder="Mpesa balance..." onkeydown="enterToSubmit()"><br><br>    
         </div>
+        <button onclick="printMessage()" class="message-button">Mpesa Message</button>
     </div>
-    <button onclick="printMessage()" class="message-button">Mpesa Message</button>
   </div>
 
     
@@ -82,7 +81,7 @@
     <p class="errorMessage"></p>
   </div>
 
-  <button> <a href="messages.html">to messages</a></button>
+  <button> <a href="messages.html">Messages ></a></button>
 </main>
 
 
