--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
       </div>
       
 
-      <button> <a href="messages.html">Messages ></a></button>
+      <button> <a href="messages.html">Messages</a></button>
   </section>     
 
 </main>
